# gst-plugins-shine-0.10

./: AUTHORS  README.md  configure.ac
src/: Makefile.am  gstshinemp3enc.c  gstshinemp3enc.h
